# fellow-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/fellowai/: llm.py  main.py
src/fellowai/agents/: base.py  engineering_team.py  execution_agent.py  lab_director.py  librarian.py  research_analyst.py  research_architect.py
src/fellowai/models/: paper.py
src/fellowai/tools/: file_ops.py  pdf.py
src/fellowai/workers/: architect_worker.py  base_worker.py  engineering_worker.py  execution_worker.py  research_worker.py  runtime_review_worker.py  static_review_worker.py
src/fellowai/workflow/: graph.py  state.py
tests/: test_build.py
